live-prop-test-macros/tests/compile_fail/old_no_arguments.stderr
error: `old` requires an expression as its "argument"
 --> $DIR/old_no_arguments.rs:3:34
  |
3 | #[live_prop_test(postcondition = "old()")]
  |                                  ^^^^^^^
